<resources>
    <string name="com.crashlytics.android.build_id">be55b00d-a734-463f-8e71-4dd286172633</string>
    <string name="abbrev_not_applicable">N/A</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="action_sheet_chat_snippet_format">*@%1$s*: %2$s</string>
    <string name="action_sheet_chat_snippet_format_status">*@%1$s*</string>
    <string name="action_sheet_delete_broadcast">Delete Broadcast</string>
    <string name="action_sheet_hide_chat">Hide Chat</string>
    <string name="action_sheet_label_block">Block User</string>
    <string name="action_sheet_label_view_profile">View Profile</string>
    <string name="action_sheet_remove_replay">Remove Replay</string>
    <string name="action_sheet_save_to_gallery">Save to Gallery</string>
    <string name="action_sheet_saved_to_gallery">Saved to Gallery</string>
    <string name="action_sheet_show_chat">Show Chat</string>
    <string name="app_name">Periscope</string>
    <string name="attribution">Attribution</string>
    <string name="attribution_url">https://periscope.tv/android-attribution</string>
    <string name="autosave_settings">Autosave Broadcast</string>
    <string name="autosave_settings_description">Turn on to automatically save broadcasts to your Camera Roll.</string>
    <string name="autosave_settings_off">Do not automatically save broadcasts to your Camera Roll.</string>
    <string name="banned_user_error_toast">Your account has been disabled. Please contact help@periscope.tv</string>
    <string name="bitrate_too_low">Internet connection too slow.</string>
    <string name="bitrate_undefined">Internet connection not established.</string>
    <string name="block_dialog_btn_confirm">Block</string>
    <string name="block_dialog_title">Are you sure you want to block?</string>
    <string name="block_unblock_dialog_btn_cancel">Cancel</string>
    <string name="blocked">Blocked</string>
    <string name="broadcast_empty">No one you are following is LIVE</string>
    <string name="broadcast_empty_subtitle_caps">VIEW GLOBAL LIST</string>
    <string name="broadcast_following_chat_off">Everybody can chat</string>
    <string name="broadcast_following_chat_on">Only users you follow can chat</string>
    <string name="broadcast_limited">Limited by broadcaster</string>
    <string name="broadcast_limited_dialog_message">The broadcaster has limited chat to only people they are following.</string>
    <string name="broadcast_limited_dialog_title">Chat has been limited</string>
    <string name="broadcast_live_label">You are now</string>
    <string name="broadcast_location_off">Location Sharing OFF</string>
    <string name="broadcast_location_on">Location Sharing ON</string>
    <string name="broadcast_private_caps">PRIVATE</string>
    <string name="broadcast_private_count_caps">PRIVATE %d</string>
    <string name="broadcast_public_caps">PUBLIC</string>
    <string name="broadcast_title_hint">Broadcast Title</string>
    <string name="broadcast_too_full">Broadcast too full…</string>
    <string name="broadcast_too_full_dialog_message">There are a lot of people watching this right now! To limit messages for the broadcaster, only early joiners can chat.</string>
    <string name="broadcast_too_full_dialog_title">Sorry, the broadcast is too full…</string>
    <string name="broadcast_twitter_disabled">Twitter Post unavailable</string>
    <string name="broadcast_twitter_post_off">Twitter Post OFF</string>
    <string name="broadcast_twitter_post_on">Twitter Post ON</string>
    <string name="broadcaster">Broadcaster</string>
    <string name="broadcaster_kick_block">Broadcaster blocked *%s*</string>
    <string name="broadcaster_kicked_me">You were blocked by the broadcaster</string>
    <string name="broadcasting_live">LIVE</string>
    <string name="btn_blocked">Blocked</string>
    <string name="btn_follow">Follow</string>
    <string name="btn_following">Following</string>
    <string name="btn_start_broadcast">START BROADCAST</string>
    <string name="btn_stop_broadcast">Stop Broadcast</string>
    <string name="camera_double_tap">Double-tap to *Flip Camera*</string>
    <string name="camera_swipe_down">Swipe down to *Stop*</string>
    <string name="cancel_user_selection">Cancel</string>
    <string name="chat_join">*%s* joined</string>
    <string name="comment_hint">Say something…</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="connecting">Connecting to chatroom...</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_caps">CREATE ACCOUNT</string>
    <string name="days">%sd</string>
    <string name="delete_broadcast_cancel">Cancel</string>
    <string name="delete_broadcast_confirm">Delete</string>
    <string name="delete_broadcast_dialog">Are you sure you want to delete this broadcast?</string>
    <string name="delete_broadcast_error">We encountered an error deleting your broadcast. Please try again.</string>
    <string name="delete_broadcast_success">Broadcast deleted.</string>
    <string name="deselect_all_caps">DESELECT ALL</string>
    <string name="dialog_btn_cancel_end_broadcast">Cancel</string>
    <string name="dialog_btn_cancel_logout">Cancel</string>
    <string name="dialog_btn_confirm_end_broadcast">Confirm</string>
    <string name="dialog_btn_confirm_logout">Logout</string>
    <string name="dialog_message_cancel_broadcast">Are you sure you want to cancel this broadcast?</string>
    <string name="dialog_message_end_broadcast">Are you sure you want to end this broadcast?</string>
    <string name="dialog_message_logout">Are you sure you want to log out?</string>
    <string name="display_name_error">Display name must be at least 1 character</string>
    <string name="ellipsis">…</string>
    <string name="ended_broadcast">ENDED</string>
    <string name="error_set_preferences">"Couldn't set your preferences"</string>
    <string name="featured">FEATURED</string>
    <string name="featured_byline">%s Followers</string>
    <string name="featured_most_loved">Most loved</string>
    <string name="featured_twitter">Following on Twitter</string>
    <string name="featured_twitter_byline">From Twitter</string>
    <string name="featured_users">Featured users</string>
    <string name="feedback_desc">Dear Periscope team,</string>
    <string name="feedback_email_subject">Feedback for %s</string>
    <string name="feedback_summary_hint">Summary</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_toast">Your feedback has been generated.</string>
    <string name="follow_caps">FOLLOW</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="legal">Legal</string>
    <string name="logout">Logout</string>
    <string name="send_feedback">Send feedback</string>
    <string name="settings">Settings</string>
    <string name="suggested">suggested</string>
    <string name="tos_line">by signing up you agree to our *1$ToS* and *2$Privacy Policy*</string>
</resources>