<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <o.amc android:id="@id/location" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_location" android:alpha="0.3" android:toolTipOn="@string/broadcast_location_on" android:toolTipOff="@string/broadcast_location_off" style="@style/IconButton" />
    <o.amc android:id="@id/following_chat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_followingchat" android:layout_toRightOf="@id/location" android:alpha="0.3" android:layout_marginStart="8.0dip" android:toolTipOn="@string/broadcast_following_chat_on" android:toolTipOff="@string/broadcast_following_chat_off" style="@style/IconButton" />
    <o.amc android:id="@id/tweet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_twitter" android:layout_toRightOf="@id/following_chat" android:alpha="0.3" android:layout_marginStart="8.0dip" android:toolTipOn="@string/broadcast_twitter_post_on" android:toolTipOff="@string/broadcast_twitter_post_off" style="@style/IconButton" />
</RelativeLayout>