<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <View android:background="@color/dark_blue" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_alignParentTop="true" />
    <o.amt android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" />
    <FrameLayout android:layout_gravity="center_horizontal" android:layout_width="64.0dip" android:layout_height="64.0dip" android:layout_marginTop="54.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
        <o.alm android:layout_gravity="center_horizontal" android:id="@id/profile_image" android:layout_width="62.0dip" android:layout_height="62.0dip" android:maskType="oval" />
        <ImageView android:id="@id/profile_image_border" android:background="@drawable/bg_profile_avatar_circle" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </FrameLayout>
    <o.amc android:id="@id/fullname_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_spacing_16" android:layout_marginTop="137.0dip" android:layout_marginRight="@dimen/standard_spacing_16" android:src="@drawable/ic_login_fullname" android:tint="@color/bg_green_icon" />
    <o.alz android:textSize="16.0sp" android:textColor="@color/dark_grey" android:id="@id/display_name" android:background="@drawable/bg_edit_text_input" android:layout_width="fill_parent" android:layout_height="25.0dip" android:layout_marginLeft="@dimen/indented_list_left_padding" android:layout_marginTop="137.0dip" android:layout_marginRight="@dimen/standard_spacing_16" android:font="fonts/MuseoSans-500.otf" />
    <o.ami android:textSize="10.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/dn_error" android:background="@color/live" android:paddingLeft="@dimen/indented_list_left_padding" android:paddingRight="@dimen/standard_spacing_16" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_below="@id/display_name" android:font="fonts/MuseoSans-300.otf" />
    <o.amc android:id="@id/username_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_spacing_16" android:layout_marginTop="20.0dip" android:layout_marginRight="@dimen/standard_spacing_16" android:src="@drawable/ic_login_username" android:layout_below="@id/dn_error" android:tint="@color/bg_green_icon" />
    <o.alz android:textSize="16.0sp" android:textColor="@color/dark_grey" android:id="@id/username" android:background="@drawable/bg_edit_text_input" android:layout_width="fill_parent" android:layout_height="25.0dip" android:layout_marginLeft="@dimen/indented_list_left_padding" android:layout_marginTop="20.0dip" android:layout_marginRight="@dimen/standard_spacing_16" android:layout_below="@id/dn_error" android:font="fonts/MuseoSans-500.otf" />
    <o.ami android:textSize="10.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/username_error" android:background="@color/live" android:paddingLeft="@dimen/indented_list_left_padding" android:paddingRight="@dimen/standard_spacing_16" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_below="@id/username" android:font="fonts/MuseoSans-300.otf" />
    <o.ami android:textSize="10.0sp" android:textColor="@color/light_grey" android:id="@id/tos_line" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/indented_list_left_padding" android:layout_marginTop="8.0dip" android:text="@string/tos_line" android:layout_below="@id/username_error" android:font="fonts/MuseoSans-300.otf" />
    <o.ami android:textSize="14.0sp" android:textColor="@color/suggested" android:id="@id/suggested" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/sign_up_margin" android:text="@string/suggested" android:layout_below="@id/display_name" android:layout_alignBaseline="@id/username" android:layout_alignParentRight="true" android:font="fonts/MuseoSans-300.otf" />
    <o.alw android:textSize="12.0sp" android:textColor="@android:color/white" android:id="@id/create_account" android:background="@drawable/bg_button_blue_filled" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sign_up_margin" android:layout_marginTop="32.0dip" android:layout_marginRight="@dimen/standard_spacing_16" android:text="@string/create_account_caps" android:layout_below="@id/tos_line" android:layout_alignParentRight="true" android:font="fonts/MuseoSans-500.otf" />
</RelativeLayout>